@@ -18,6 +18,7 @@ Build-Depends: dpkg-dev (>= 1.22.5) <!pkg.apt.ci>,
                libbz2-dev,
                libdb-dev,
                libssl-dev,
+               libssh-dev,
                liblz4-dev (>= 0.0~r126),
                liblzma-dev,
                libseccomp-dev (>= 2.4.2) [amd64 arm64 armel armhf i386 mips mips64el mipsel ppc64el s390x hppa powerpc powerpcspe ppc64 x32],
