@@ -17,6 +17,12 @@ add_executable(cdrom cdrom.cc)
 add_executable(http http.cc basehttp.cc $<TARGET_OBJECTS:connectlib>)
 add_executable(mirror mirror.cc)
 add_executable(rred rred.cc)
+if(OPENSSH_FOUND)
+        add_executable(sftp sftp.cc)
+        target_link_libraries(sftp ${OPENSSH_LIBRARIES})
+        install(TARGETS sftp RUNTIME DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/apt/methods)
+        add_links(${CMAKE_INSTALL_LIBEXECDIR}/apt/methods sftp ssh)
+endif()
 
 target_compile_definitions(connectlib PRIVATE ${OPENSSL_DEFINITIONS})
 target_include_directories(connectlib PRIVATE ${OPENSSL_INCLUDE_DIR})
